--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         <div class="row gy-4 justify-content-center">
           <div class="col-xl-3 col-lg-4 col-md-6">
             <div class="gallery-item h-100">
-              <img src="new_logo.jpeg" class="img-fluid" alt="">
+              <img src="new_logo.jpeg" class="img-fluid" alt="" loading="lazy">
               <div class="gallery-links d-flex align-items-center justify-content-center">
                 <a href="new_logo.jpeg" title="Aagman Farm" class="glightbox preview-link"><i class="bi bi-arrows-angle-expand"></i></a>
               </div>
@@ -78,7 +78,7 @@
           </div>
           <div class="col-xl-3 col-lg-4 col-md-6">
             <div class="gallery-item h-100">
-              <img src="2.jpg" class="img-fluid" alt="">
+              <img src="2.jpg" class="img-fluid" alt="" loading="lazy">
               <div class="gallery-links d-flex align-items-center justify-content-center">
                 <a href="2.jpg" title="Girvagdo Farm" class="glightbox preview-link"><i class="bi bi-arrows-angle-expand"></i></a>
               </div>
@@ -86,7 +86,7 @@
           </div>
           <div class="col-xl-3 col-lg-4 col-md-6">
             <div class="gallery-item h-100">
-              <img src="1.jpg" class="img-fluid" alt="">
+              <img src="1.jpg" class="img-fluid" alt="" loading="lazy">
               <div class="gallery-links d-flex align-items-center justify-content-center">
                 <a href="1.jpg" title="Girvagdo Farm" class="glightbox preview-link"><i class="bi bi-arrows-angle-expand"></i></a>
               </div>
@@ -94,7 +94,7 @@
           </div>
           <div class="col-xl-3 col-lg-4 col-md-6">
             <div class="gallery-item h-100">
-              <img src="3.jpg" class="img-fluid" alt="">
+              <img src="3.jpg" class="img-fluid" alt="" loading="lazy">
               <div class="gallery-links d-flex align-items-center justify-content-center">
                 <a href="3.jpg" title="Girvagdo Farm" class="glightbox preview-link"><i class="bi bi-arrows-angle-expand"></i></a>
               </div>
@@ -102,7 +102,7 @@
           </div>
           <div class="col-xl-3 col-lg-4 col-md-6">
             <div class="gallery-item h-100">
-              <img src="4.jpg" class="img-fluid" alt="">
+              <img src="4.jpg" class="img-fluid" alt="" loading="lazy">
               <div class="gallery-links d-flex align-items-center justify-content-center">
                 <a href="4.jpg" title="Girvagdo Farm" class="glightbox preview-link"><i class="bi bi-arrows-angle-expand"></i></a>
               </div>
@@ -110,7 +110,7 @@
           </div>
           <div class="col-xl-3 col-lg-4 col-md-6">
             <div class="gallery-item h-100">
-              <img src="5.jpg" class="img-fluid" alt="">
+              <img src="5.jpg" class="img-fluid" alt="" loading="lazy">
               <div class="gallery-links d-flex align-items-center justify-content-center">
                 <a href="5.jpg" title="Girvagdo Farm" class="glightbox preview-link"><i class="bi bi-arrows-angle-expand"></i></a>
               </div>
@@ -118,7 +118,7 @@
           </div>
           <div class="col-xl-3 col-lg-4 col-md-6">
             <div class="gallery-item h-100">
-              <img src="6.jpg" class="img-fluid" alt="">
+              <img src="6.jpg" class="img-fluid" alt="" loading="lazy">
               <div class="gallery-links d-flex align-items-center justify-content-center">
                 <a href="6.jpg" title="Girvagdo Farm" class="glightbox preview-link"><i class="bi bi-arrows-angle-expand"></i></a>
               </div>
@@ -126,7 +126,7 @@
           </div>
           <div class="col-xl-3 col-lg-4 col-md-6">
             <div class="gallery-item h-100">
-              <img src="7.jpg" class="img-fluid" alt="">
+              <img src="7.jpg" class="img-fluid" alt="" loading="lazy">
               <div class="gallery-links d-flex align-items-center justify-content-center">
                 <a href="7.jpg" title="Girvagdo Farm" class="glightbox preview-link"><i class="bi bi-arrows-angle-expand"></i></a>
               </div>
@@ -134,7 +134,7 @@
           </div>
           <div class="col-xl-3 col-lg-4 col-md-6">
             <div class="gallery-item h-100">
-              <img src="8.jpg" class="img-fluid" alt="">
+              <img src="8.jpg" class="img-fluid" alt="" loading="lazy">
               <div class="gallery-links d-flex align-items-center justify-content-center">
                 <a href="8.jpg" title="Girvagdo Farm" class="glightbox preview-link"><i class="bi bi-arrows-angle-expand"></i></a>
               </div>
@@ -142,7 +142,7 @@
           </div>
           <div class="col-xl-3 col-lg-4 col-md-6">
             <div class="gallery-item h-100">
-              <img src="9.jpg" class="img-fluid" alt="">
+              <img src="9.jpg" class="img-fluid" alt="" loading="lazy">
               <div class="gallery-links d-flex align-items-center justify-content-center">
                 <a href="9.jpg" title="Girvagdo Farm" class="glightbox preview-link"><i class="bi bi-arrows-angle-expand"></i></a>
               </div>
@@ -150,7 +150,7 @@
           </div>
           <div class="col-xl-3 col-lg-4 col-md-6">
             <div class="gallery-item h-100">
-              <img src="10.jpg" class="img-fluid" alt="">
+              <img src="10.jpg" class="img-fluid" alt="" loading="lazy">
               <div class="gallery-links d-flex align-items-center justify-content-center">
                 <a href="10.jpg" title="Girvagdo Farm" class="glightbox preview-link"><i class="bi bi-arrows-angle-expand"></i></a>
               </div>
@@ -158,7 +158,7 @@
           </div>
           <div class="col-xl-3 col-lg-4 col-md-6">
             <div class="gallery-item h-100">
-              <img src="11.jpg" class="img-fluid" alt="">
+              <img src="11.jpg" class="img-fluid" alt="" loading="lazy">
               <div class="gallery-links d-flex align-items-center justify-content-center">
                 <a href="11.jpg" title="Girvagdo Farm" class="glightbox preview-link"><i class="bi bi-arrows-angle-expand"></i></a>
               </div>
@@ -166,7 +166,7 @@
           </div>
           <div class="col-xl-3 col-lg-4 col-md-6">
             <div class="gallery-item h-100">
-              <img src="12.jpg" class="img-fluid" alt="">
+              <img src="12.jpg" class="img-fluid" alt="" loading="lazy">
               <div class="gallery-links d-flex align-items-center justify-content-center">
                 <a href="12.jpg" title="Girvagdo Farm" class="glightbox preview-link"><i class="bi bi-arrows-angle-expand"></i></a>
               </div>
@@ -174,7 +174,7 @@
           </div> 
           <div class="col-xl-3 col-lg-4 col-md-6">
             <div class="gallery-item h-100">
-              <img src="new1.jpeg" class="img-fluid" alt="">
+              <img src="new1.jpeg" class="img-fluid" alt="" loading="lazy">
               <div class="gallery-links d-flex align-items-center justify-content-center">
                 <a href="new1.jpeg" title="Girvagdo Farm" class="glightbox preview-link"><i class="bi bi-arrows-angle-expand"></i></a>
               </div>
@@ -182,7 +182,7 @@
           </div>
           <div class="col-xl-3 col-lg-4 col-md-6">
             <div class="gallery-item h-100">
-              <img src="new2.jpeg" class="img-fluid" alt="">
+              <img src="new2.jpeg" class="img-fluid" alt="" loading="lazy">
               <div class="gallery-links d-flex align-items-center justify-content-center">
                 <a href="new2.jpeg" title="Girvagdo Farm" class="glightbox preview-link"><i class="bi bi-arrows-angle-expand"></i></a>
               </div>
@@ -190,7 +190,7 @@
           </div>
           <div class="col-xl-3 col-lg-4 col-md-6">
             <div class="gallery-item h-100">
-              <img src="new3.jpeg" class="img-fluid" alt="">
+              <img src="new3.jpeg" class="img-fluid" alt="" loading="lazy">
               <div class="gallery-links d-flex align-items-center justify-content-center">
                 <a href="new3.jpeg" title="Girvagdo Farm" class="glightbox preview-link"><i class="bi bi-arrows-angle-expand"></i></a>
               </div>
@@ -198,7 +198,7 @@
           </div>
           <div class="col-xl-3 col-lg-4 col-md-6">
             <div class="gallery-item h-100">
-              <img src="new4.jpeg" class="img-fluid" alt="">
+              <img src="new4.jpeg" class="img-fluid" alt="" loading="lazy">
               <div class="gallery-links d-flex align-items-center justify-content-center">
                 <a href="new4.jpeg" title="Girvagdo Farm" class="glightbox preview-link"><i class="bi bi-arrows-angle-expand"></i></a>
               </div>
@@ -206,7 +206,7 @@
           </div>
           <div class="col-xl-3 col-lg-4 col-md-6">
             <div class="gallery-item h-100">
-              <img src="new5.jpeg" class="img-fluid" alt="">
+              <img src="new5.jpeg" class="img-fluid" alt="" loading="lazy">
               <div class="gallery-links d-flex align-items-center justify-content-center">
                 <a href="new5.jpeg" title="Girvagdo Farm" class="glightbox preview-link"><i class="bi bi-arrows-angle-expand"></i></a>
               </div>
@@ -214,7 +214,7 @@
           </div>
           <div class="col-xl-3 col-lg-4 col-md-6">
             <div class="gallery-item h-100">
-              <img src="new6.jpeg" class="img-fluid" alt="">
+              <img src="new6.jpeg" class="img-fluid" alt="" loading="lazy">
               <div class="gallery-links d-flex align-items-center justify-content-center">
                 <a href="new6.jpeg" title="Girvagdo Farm" class="glightbox preview-link"><i class="bi bi-arrows-angle-expand"></i></a>
               </div>
@@ -222,7 +222,7 @@
           </div>
           <div class="col-xl-3 col-lg-4 col-md-6">
             <div class="gallery-item h-100">
-              <img src="new7.jpeg" class="img-fluid" alt="">
+              <img src="new7.jpeg" class="img-fluid" alt="" loading="lazy">
               <div class="gallery-links d-flex align-items-center justify-content-center">
                 <a href="new7.jpeg" title="Girvagdo Farm" class="glightbox preview-link"><i class="bi bi-arrows-angle-expand"></i></a>
               </div>
@@ -230,7 +230,7 @@
           </div>
           <div class="col-xl-3 col-lg-4 col-md-6">
             <div class="gallery-item h-100">
-              <img src="new8.jpeg" class="img-fluid" alt="">
+              <img src="new8.jpeg" class="img-fluid" alt="" loading="lazy">
               <div class="gallery-links d-flex align-items-center justify-content-center">
                 <a href="new8.jpeg" title="Girvagdo Farm" class="glightbox preview-link"><i class="bi bi-arrows-angle-expand"></i></a>
               </div>
@@ -238,7 +238,7 @@
           </div>
           <div class="col-xl-3 col-lg-4 col-md-6">
             <div class="gallery-item h-100">
-              <img src="new9.jpeg" class="img-fluid" alt="">
+              <img src="new9.jpeg" class="img-fluid" alt="" loading="lazy">
               <div class="gallery-links d-flex align-items-center justify-content-center">
                 <a href="new9.jpeg" title="Girvagdo Farm" class="glightbox preview-link"><i class="bi bi-arrows-angle-expand"></i></a>
               </div>
@@ -246,7 +246,7 @@
           </div>
           <div class="col-xl-3 col-lg-4 col-md-6">
             <div class="gallery-item h-100">
-              <img src="new10.jpeg" class="img-fluid" alt="">
+              <img src="new10.jpeg" class="img-fluid" alt="" loading="lazy">
               <div class="gallery-links d-flex align-items-center justify-content-center">
                 <a href="new10.jpeg" title="Girvagdo Farm" class="glightbox preview-link"><i class="bi bi-arrows-angle-expand"></i></a>
               </div>
@@ -254,7 +254,7 @@
           </div>
           <div class="col-xl-3 col-lg-4 col-md-6">
             <div class="gallery-item h-100">
-              <img src="new11.jpeg" class="img-fluid" alt="">
+              <img src="new11.jpeg" class="img-fluid" alt="" loading="lazy">
               <div class="gallery-links d-flex align-items-center justify-content-center">
                 <a href="new11.jpeg" title="Girvagdo Farm" class="glightbox preview-link"><i class="bi bi-arrows-angle-expand"></i></a>
               </div>
@@ -262,7 +262,7 @@
           </div>
           <div class="col-xl-3 col-lg-4 col-md-6">
             <div class="gallery-item h-100">
-              <img src="new12.jpeg" class="img-fluid" alt="">
+              <img src="new12.jpeg" class="img-fluid" alt="" loading="lazy">
               <div class="gallery-links d-flex align-items-center justify-content-center">
                 <a href="new12.jpeg" title="Girvagdo Farm" class="glightbox preview-link"><i class="bi bi-arrows-angle-expand"></i></a>
               </div>
@@ -270,7 +270,7 @@
           </div>
           <div class="col-xl-3 col-lg-4 col-md-6">
             <div class="gallery-item h-100">
-              <img src="new13.jpeg" class="img-fluid" alt="">
+              <img src="new13.jpeg" class="img-fluid" alt="" loading="lazy">
               <div class="gallery-links d-flex align-items-center justify-content-center">
                 <a href="new13.jpeg" title="Girvagdo Farm" class="glightbox preview-link"><i class="bi bi-arrows-angle-expand"></i></a>
               </div>
@@ -278,7 +278,7 @@
           </div>
           <div class="col-xl-3 col-lg-4 col-md-6">
             <div class="gallery-item h-100">
-              <img src="new14.jpeg" class="img-fluid" alt="">
+              <img src="new14.jpeg" class="img-fluid" alt="" loading="lazy">
               <div class="gallery-links d-flex align-items-center justify-content-center">
                 <a href="new14.jpeg" title="Girvagdo Farm" class="glightbox preview-link"><i class="bi bi-arrows-angle-expand"></i></a>
               </div>
@@ -286,7 +286,7 @@
           </div>
           <div class="col-xl-3 col-lg-4 col-md-6">
             <div class="gallery-item h-100">
-              <img src="new15.jpeg" class="img-fluid" alt="">
+              <img src="new15.jpeg" class="img-fluid" alt="" loading="lazy">
               <div class="gallery-links d-flex align-items-center justify-content-center">
                 <a href="new15.jpeg" title="Girvagdo Farm" class="glightbox preview-link"><i class="bi bi-arrows-angle-expand"></i></a>
               </div>
@@ -294,7 +294,7 @@
           </div>
           <div class="col-xl-3 col-lg-4 col-md-6">
             <div class="gallery-item h-100">
-              <img src="new16.jpeg" class="img-fluid" alt="">
+              <img src="new16.jpeg" class="img-fluid" alt="" loading="lazy">
               <div class="gallery-links d-flex align-items-center justify-content-center">
                 <a href="new16.jpeg" title="Girvagdo Farm" class="glightbox preview-link"><i class="bi bi-arrows-angle-expand"></i></a>
               </div>
@@ -302,7 +302,7 @@
           </div>
           <div class="col-xl-3 col-lg-4 col-md-6">
             <div class="gallery-item h-100">
-              <img src="new17.jpeg" class="img-fluid" alt="">
+              <img src="new17.jpeg" class="img-fluid" alt="" loading="lazy">
               <div class="gallery-links d-flex align-items-center justify-content-center">
                 <a href="new17.jpeg" title="Girvagdo Farm" class="glightbox preview-link"><i class="bi bi-arrows-angle-expand"></i></a>
               </div>
@@ -310,7 +310,7 @@
           </div>
           <div class="col-xl-3 col-lg-4 col-md-6">
             <div class="gallery-item h-100">
-              <img src="new18.jpeg" class="img-fluid" alt="">
+              <img src="new18.jpeg" class="img-fluid" alt="" loading="lazy">
               <div class="gallery-links d-flex align-items-center justify-content-center">
                 <a href="new18.jpeg" title="Girvagdo Farm" class="glightbox preview-link"><i class="bi bi-arrows-angle-expand"></i></a>
               </div>
@@ -318,7 +318,7 @@
           </div>
           <div class="col-xl-3 col-lg-4 col-md-6">
             <div class="gallery-item h-100">
-              <img src="new19.jpeg" class="img-fluid" alt="">
+              <img src="new19.jpeg" class="img-fluid" alt="" loading="lazy">
               <div class="gallery-links d-flex align-items-center justify-content-center">
                 <a href="new19.jpeg" title="Girvagdo Farm" class="glightbox preview-link"><i class="bi bi-arrows-angle-expand"></i></a>
               </div>
@@ -326,7 +326,7 @@
           </div>
           <div class="col-xl-3 col-lg-4 col-md-6">
             <div class="gallery-item h-100">
-              <img src="new20.jpeg" class="img-fluid" alt="">
+              <img src="new20.jpeg" class="img-fluid" alt="" loading="lazy">
               <div class="gallery-links d-flex align-items-center justify-content-center">
                 <a href="new20.jpeg" title="Girvagdo Farm" class="glightbox preview-link"><i class="bi bi-arrows-angle-expand"></i></a>
               </div>
@@ -334,7 +334,7 @@
           </div>
           <div class="col-xl-3 col-lg-4 col-md-6">
             <div class="gallery-item h-100">
-              <img src="new21.jpeg" class="img-fluid" alt="">
+              <img src="new21.jpeg" class="img-fluid" alt="" loading="lazy">
               <div class="gallery-links d-flex align-items-center justify-content-center">
                 <a href="new21.jpeg" title="Girvagdo Farm" class="glightbox preview-link"><i class="bi bi-arrows-angle-expand"></i></a>
               </div>
@@ -342,7 +342,7 @@
           </div>
           <div class="col-xl-3 col-lg-4 col-md-6">
             <div class="gallery-item h-100">
-              <img src="new21.jpeg" class="img-fluid" alt="">
+              <img src="new21.jpeg" class="img-fluid" alt="" loading="lazy">
               <div class="gallery-links d-flex align-items-center justify-content-center">
                 <a href="new22.jpeg" title="Girvagdo Farm" class="glightbox preview-link"><i class="bi bi-arrows-angle-expand"></i></a>
               </div>
@@ -350,7 +350,7 @@
           </div>
           <div class="col-xl-3 col-lg-4 col-md-6">
             <div class="gallery-item h-100">
-              <img src="new23.jpeg" class="img-fluid" alt="">
+              <img src="new23.jpeg" class="img-fluid" alt="" loading="lazy">
               <div class="gallery-links d-flex align-items-center justify-content-center">
                 <a href="new23.jpeg" title="Girvagdo Farm" class="glightbox preview-link"><i class="bi bi-arrows-angle-expand"></i></a>
               </div>
@@ -358,7 +358,7 @@
           </div>
           <div class="col-xl-3 col-lg-4 col-md-6">
             <div class="gallery-item h-100">
-              <img src="new24.jpeg" class="img-fluid" alt="">
+              <img src="new24.jpeg" class="img-fluid" alt="" loading="lazy">
               <div class="gallery-links d-flex align-items-center justify-content-center">
                 <a href="new24.jpeg" title="Girvagdo Farm" class="glightbox preview-link"><i class="bi bi-arrows-angle-expand"></i></a>
               </div>
@@ -366,7 +366,7 @@
           </div>
           <div class="col-xl-3 col-lg-4 col-md-6">
             <div class="gallery-item h-100">
-              <img src="new25.jpeg" class="img-fluid" alt="">
+              <img src="new25.jpeg" class="img-fluid" alt="" loading="lazy">
               <div class="gallery-links d-flex align-items-center justify-content-center">
                 <a href="new25.jpeg" title="Girvagdo Farm" class="glightbox preview-link"><i class="bi bi-arrows-angle-expand"></i></a>
               </div>
