--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
           </div>
           <div class="col-xl-3 col-lg-4 col-md-6">
             <div class="gallery-item h-100">
-              <video class="img-fluid" alt="" controls preload="none"><source src="video.mp4" type="video/mp4"></video>
+              <video class="img-fluid" alt="" preload="none"><source src="video.mp4" type="video/mp4"></video>
               <div class="gallery-links d-flex align-items-center justify-content-center">
                 <a href="video.mp4" title="Girvagdo Farm" class="glightbox preview-link"><i class="bi bi-arrows-angle-expand"></i></a>
               </div>
