--- a/index.html
+++ b/index.html
@@ -68,14 +68,21 @@
               </div>
             </div>
           </div>
-          <div class="col-xl-3 col-lg-4 col-md-6">
-            <div class="gallery-item h-100">
-              <video class="img-fluid" alt="" preload="none"><source src="video.mp4" type="video/mp4"></video>
-              <div class="gallery-links d-flex align-items-center justify-content-center">
-                <a href="video.mp4" title="Girvagdo Farm" class="glightbox preview-link"><i class="bi bi-arrows-angle-expand"></i></a>
-              </div>
-            </div>
-          </div>
+<div class="col-xl-3 col-lg-4 col-md-6">
+  <div class="gallery-item h-100">
+    <!-- Lazy Loading Video -->
+    <video class="img-fluid" preload="none" controls>
+      <source src="video.mp4" type="video/mp4">
+      Your browser does not support the video tag.
+    </video>
+    <div class="gallery-links d-flex align-items-center justify-content-center">
+      <a href="video.mp4" title="Girvagdo Farm" class="glightbox preview-link">
+        <i class="bi bi-arrows-angle-expand"></i>
+      </a>
+    </div>
+  </div>
+</div>
+
           <div class="col-xl-3 col-lg-4 col-md-6">
             <div class="gallery-item h-100">
               <img src="2.jpg" class="img-fluid" alt="" loading="lazy">
